@@ -41,7 +41,7 @@
 # define TIEMU_VERSION VERSION
 #endif
 #define TIEMU_REQUIRES_LIBFILES_VERSION		"0.6.4"
-#define TIEMU_REQUIRES_LIBCABLES_VERSION	"3.9.1"
+#define TIEMU_REQUIRES_LIBCABLES_VERSION	"3.9.5"
 #define TIEMU_REQUIRES_LIBCALCS_VERSION 	"4.5.9"
 
 #endif
